calendar Rec Service

--- a/calendar.html
+++ b/calendar.html
@@ -7,7 +7,8 @@
     <title>Rec Services Calendar</title>
     <meta name="page where employee can see their shift and bosses can updated employee workload" content="This is the description for the page">
     <link rel="stylesheet" href="style/siteStyle.css" /> <!-- Site style sheet -->
-    <link rel="stylesheet" href="" /> <!-- Add page-specific stylesheet(s) -->
+    <link rel="stylesheet" href="style/style.css" /> <!-- Add page-specific stylesheet(s) -->
+
   </head>
 <body>
   <header>
@@ -16,10 +17,225 @@
       </nav>
   </header>
   <main>
-    <!-- Main content of the page -->
+    <h1>
+      Employee Calendar
+    </h1>
+    
+    <section id="weekView">
+      <table id="week">
+        <captioion id="currentMonth">
+          <h3>
+            Current month
+          </h3>
+        </captioion>
+        <colgroup>
+          <col class="time" span="1">
+        </colgroup>
+        <thead>
+          <tr>
+            <th>
+            </th>
+            <th>
+              Sun
+            </th>
+            <th>
+              Mon
+            </th>
+            <th>
+              Tue
+            </th>
+            <th>
+              Wed
+            </th>
+            <th>
+              Thu
+            </th>
+            <th>
+              Fri
+            </th>
+            <th>
+              Sat
+            </th>
+          </tr>
+        </thead>
+          <tr>
+            <th>6:00 AM</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+          </tr>
+          <tr>
+            <th>7:00 AM</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+          </tr>
+          <tr>
+            <th>8:00 AM</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+          </tr>
+          <tr>
+            <th>9:00 AM</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+          </tr>
+          <tr>
+            <th>10:00 AM</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+          </tr>
+          <tr>
+            <th>11:00 AM</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+          </tr>
+          <tr>
+            <th>12:00 AM</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+          </tr>
+          <tr>
+            <th>1:00 PM</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+          </tr>
+          <tr>
+            <th>2:00 PM</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+          </tr>
+          <tr>
+            <th>3:00 PM</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+          </tr>
+          <tr>
+            <th>1:00 PM</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+          </tr>
+          <tr>
+            <th>4:00 PM</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+          </tr>
+          <tr>
+            <th>5:00 PM</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+          </tr>
+          <tr>
+            <th>6:00 PM</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+          </tr>
+          <tr>
+            <th>7:00 PM</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+          </tr>
+          <tr>
+            <th>8:00 PM</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+          </tr>
+          <tr>
+            <th>9:00 PM</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+          </tr>
+          <tr>
+            <th>10:00 PM</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+          </tr>
+      </table>
+    </section>
+    <section id="dayView">
+      <table id="day">
+        <captioion id="currentDay">
+          <h3>
+            Today
+          </h3>
+        </captioion>
+        <colgroup>
+          <col class="time-day" span="1">
+          <col class="tasks" span="1">
+        </colgroup>
+        <tr>
+          <th>6:00 AM</th><td></td>
+          <th>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            7:00 AM
+          </th>
+          <td>
+          </td>
+        </tr>
+        <tr>
+          <th>
+          8:00 AM
+          </th>
+          <td></td>
+        </tr>
+        <tr>
+          <th>
+          9:00 AM
+          </th>
+          <td></td>
+        </tr>
+        <tr>
+          <th>
+           10:00 AM
+          </th>
+          <td></td>
+        </tr>
+        <tr>
+          <th>
+            11:00 AM
+          </th>
+          <td></td>
+        </tr>
+        <tr>
+          <th>
+            12:00 AM
+          </th>
+          <td></td>
+        </tr>
+        <tr>
+          <th>
+            1:00 PM
+          </th>
+          <td></td>
+        </tr>
+        <tr>
+          <th>
+            2:00 PM
+          </th>
+          <td></td>
+        </tr>
+        <tr>
+          <th>
+            3:00 PM
+          </th>
+          <td></td>
+        </tr>
+        <tr>
+          <th>
+            4:00 PM
+          </th>
+          <td>
+          </td>
+        </tr>
+        <tr>
+          <th>
+            5:00 PM
+          </th>
+          <td></td>
+        </tr>
+        <tr>
+          <th>
+            6:00 PM
+          </th>
+          <td></td>
+        </tr>
+        <tr>
+          <th>
+            7:00 PM
+          </th>
+          <td></td>
+        </tr>
+        <tr>
+          <th>
+            8:00 PM
+          </th>
+          <td></td>
+        </tr>
+        <tr>
+          <th>
+            9:00 PM
+          </th>
+          <td></td>
+        </tr>
+        <tr>
+          <th>
+            10:00 PM
+          </th>
+          <td>
+          </td>
+        </tr>
+      </table>
+    </section>
   </main>
   <footer>
     <!-- Add footer items here -->
   </footer>
+
+  
 </body>
 </html>
