correzioni e nuovo file

--- a/calendar_popup.html
+++ b/calendar_popup.html
@@ -154,6 +154,15 @@
             <p>
               swimming pool
             </p>
+          </div>
+          <button id="apriFinestra">Apri Finestra</button>
+
+    <div id="finestraModale" class="modale">
+        <div class="contenuto-modale">
+            <span class="chiudi">&times;</span>
+            <p>Contenuto della finestra modale.</p>
+        </div>
+    </div>
       </section>
   </section>
   <section class="calendar__box__day">
@@ -216,5 +225,6 @@
     <!-- Add footer items here -->
   </footer>
 
+  <script src="script.js"></script>
 </body>
 </html>
