--- a/calendar.html
+++ b/calendar.html
@@ -7,7 +7,7 @@
     <title>Rec Services Calendar</title>
     <meta name="page where employee can see their shift and bosses can updated employee workload" content="This is the description for the page">
     <link rel="stylesheet" href="style/siteStyle.css" /> <!-- Site style sheet -->
-    <link rel="stylesheet" href="style/style.css" /> <!-- Add page-specific stylesheet(s) -->
+    <link rel="stylesheet" href="style/calendar.css" /> <!-- Add page-specific stylesheet(s) -->
 
   </head>
 <body>
