aggiornamento nome file

--- a/calendar_popup.html
+++ b/calendar_popup.html
@@ -249,6 +249,6 @@
     <!-- Add footer items here -->
   </footer>
 
-  <script src="scripts/script.js"></script>
+  <script src="scripts/scriptcalendar.js"></script>
 </body>
 </html>
