--- a/import-per_menu/createEvent.html
+++ b/import-per_menu/createEvent.html
@@ -5,12 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Rec Services Time Management Application</title>
-    <meta name="description" content="Login page for time management application">
-    <link rel="stylesheet" href="style/siteStyle.css" />
-    <link rel="stylesheet" href="style/loginStyle" />
-
-    <!-- Google icons, must be added in alphabetical order -->
+    <title>Create Event</title>
+    <meta name="description" content="Page where new events can be created">
+    <link rel="stylesheet" href="styles/siteStyle.css" />
+    <link rel="stylesheet" href="styles/loginStyle.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!-- google icons -->
 </head>
 
@@ -18,26 +16,6 @@
     <header>
         <nav>
             <div id="menu-container"></div>
-            <!--
-             <ul>
-                <li class="nav-box"><a href=""><span class="material-symbols-outlined">home</span>
-                        <div class="nav-text">Home</div>
-                    </a></li>
-                <li class="nav-box"><a href="calendar.html"><span
-                            class="material-symbols-outlined">calendar_month</span>
-                        <div class="nav-text">Calendar</div>
-                    </a></li>
-                <li class="nav-box"><a href=""><span class="material-symbols-outlined">timer</span>
-                        <div class="nav-text">Time Clock</div>
-                    </a></li>
-                <li class="nav-box"><a href=""><span class="material-symbols-outlined">settings</span>
-                        <div class="nav-text">Setting</div>
-                    </a></li>
-            </ul>
-            <li class="nav-box"><a href=""><span class="material-symbols-outlined">person</span>
-                    <div class="nav-text"> Profile</div>
-                </a></li>
-                -->
         </nav>
     </header>
     <main>
@@ -116,5 +94,5 @@
         <!-- Add footer items here -->
     </footer>
 </body>
-<script src="script/menu.js"></script>
+<script src="scripts/menu.js"></script>
 </html>
